--- a/panelScripts/tsconfig.json
+++ b/panelScripts/tsconfig.json
@@ -2,15 +2,14 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es5",
-    "sourceMap": true
+    "sourceMap": true,
+    "lib": [ "es2015" , "dom"],
+    "types": ["node"]
   },
   "include" : [
     "./src/modules"
   ],
   "exclude": [
     "node_modules"
-  ],
-  "compilerOptions": {
-    "lib": [ "es2015" , "dom"]
-  }
+  ]
 }
