--- a/panelScripts/package.json
+++ b/panelScripts/package.json
@@ -9,15 +9,6 @@
     "svgobjectmodelgenerator": "github:adobe-photoshop/svgObjectModelGenerator#v0.6.5",
     "tmp": "0.0.33"
   },
-  "devDependencies": {
-    "grunt": "^1.0.2",
-    "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-nodeunit": "^1.0.0",
-    "grunt-jscs": "^3.0.1",
-    "grunt-peg": "^2.0.1",
-    "jscs-trailing-whitespace-in-source": "0.0.1",
-    "nodeunit": "^0.11.2",
-    "pegjs": "~0.8"
-  },
+  "devDependencies": {},
   "main": "./src/main.js"
 }
