--- a/panelScripts/tsconfig.json
+++ b/panelScripts/tsconfig.json
@@ -3,8 +3,9 @@
     "module": "commonjs",
     "target": "es5",
     "sourceMap": true,
-    "lib": [ "es2015" , "dom"],
-    "types": ["node"]
+    "lib": [ "es2018" , "dom"],
+    "types": ["node"],
+    "downlevelIteration": true
   },
   "include" : [
     "./src/modules"
