--- a/panelScripts/package.json
+++ b/panelScripts/package.json
@@ -6,6 +6,7 @@
     "@types/node": "^12.0.4",
     "fs-extra": "^5.0.0",
     "q": "~1.0",
+    "socket.io": "^2.2.0",
     "svgobjectmodelgenerator": "github:adobe-photoshop/svgObjectModelGenerator#v0.6.5",
     "tmp": "0.0.33"
   },
