--- a/panelScripts/package.json
+++ b/panelScripts/package.json
@@ -5,11 +5,11 @@
   "dependencies": {
     "@types/node": "^12.0.4",
     "fs-extra": "^5.0.0",
+    "lodash": "^4.17.15",
     "q": "~1.0",
     "socket.io": "^2.2.0",
-	"lodash": "^4.17.15",
-    "svgobjectmodelgenerator": "github:adobe-photoshop/svgObjectModelGenerator#v0.6.5",
-    "tmp": "0.0.33"
+    "tmp": "0.0.33",
+    "typescript": "^4.1.2"
   },
   "devDependencies": {},
   "main": "./src/main.js"
